--- a/trunk/Remote/nl/downloadsFooter.htm
+++ b/trunk/Remote/nl/downloadsFooter.htm
@@ -1,18 +1,14 @@
-							</td>
-						</tr>
-					</table>
-					<br>
-					<table align="center">
-						<form method="get" action="newdownload">
-							<tr>
-								<td>Magnet Downloaden:</td>
-								<td><input type="text" name="uri" size="50"></td>
-								<td>
-									<input type="submit" value="Start">
-								</td>
-							</tr>
-						</form>
-					</table>
-				</td>
-			</tr>
-		</table>
+</td> </tr> </table>
+<br>
+<form method="get" action="newdownload" ID="Form1">
+	<table align="center">
+		<tr>
+			<td>Magnet Downloaden:</td>
+			<td><input type="text" name="uri" size="50"></td>
+			<td>
+				<input type="submit" value="Start">
+			</td>
+		</tr>
+	</table>
+</form>
+</td> </tr> </table>
