--- a/trunk/Remote/nl/downloadsTop.htm
+++ b/trunk/Remote/nl/downloadsTop.htm
@@ -1,45 +1,42 @@
-										<td class="tabedg">&nbsp;</td>
-									</tr>
-								</table>
-							</td>
-						</tr>
-						<tr>
-							<td class="frame">
-								<table width="100%">
-									<tr>
-										<form method="get">
-											<input type="hidden" name="filter_set" value="1">
-											<td nowrap style="font-size: 7pt"><b>Filter:</b></td>
-											<td/>
-											<td><input type="checkbox" id="filter_active" name="filter_active" value="1" <%= filter_active %>></td>
-											<td nowrap style="font-size: 7pt"><label for="filter_active">Actief</label></td>
-											<td/>
-											<td><input type="checkbox" id="filter_queued" name="filter_queued" value="1" <%= filter_queued %>></td>
-											<td nowrap style="font-size: 7pt"><label for="filter_queued">Wachtrij</label></td>
-											<td/>
-											<td><input type="checkbox" id="filter_sources" name="filter_sources" value="1" <%= filter_sources %>></td>
-											<td nowrap style="font-size: 7pt"><label for="filter_sources">Geen Bronnen</label></td>
-											<td/>
-											<td><input type="checkbox" id="filter_paused" name="filter_paused" value="1" <%= filter_paused %>></td>
-											<td nowrap style="font-size: 7pt"><label for="filter_paused">Gepauzeerd</label></td>
-											<td/>
-											<td><input type="checkbox" id="filter_show_all" name="filter_show_all" value="1" <%= filter_show_all %>></td>
-											<td nowrap style="font-size: 7pt"><label for="filter_show_all">Toon Alle Bronnen</label></td>
-											<td/>
-											<td nowrap><input type="submit" value=" Instellen "></td>
-											<td width="100%"/>
-											<td nowrap align="right" style="font-size: 7pt"><a href="?refresh=<%= random %>">Pagina Verversen</a></td>
-										</form>
-									</tr>
-								</table>
-								<br>
-								<table width="100%" cellspacing="0" style="border-collapse: collapse">
-									<tr>
-										<td class="viewheader">Bestandsnaam</td>
-										<td class="viewheader" align="center">Grootte</td>
-										<td class="viewheader" align="center">Voortgang</td>
-										<td class="viewheader" align="center">Snelheid</td>
-										<td class="viewheader" align="center">Bronnen</td>
-										<td class="viewheader" align="center">Status</td>
-										<td class="viewheader" align="center">Opties</td>
-									</tr>
+<td class="tabedg">&nbsp;</td>
+</tr> </table> </td> </tr>
+<tr>
+	<td class="frame">
+		<form method="get" action="" ID="Form1">
+			<table width="100%">
+				<tr>
+					<td nowrap style="font-size: 7pt"><input type="hidden" name="filter_set" value="1" ID="Hidden1"><b>Filter:</b></td>
+					<td />
+					<td><input type="checkbox" id="filter_active" name="filter_active" value="1" <%= filter_active %>></td>
+					<td nowrap style="font-size: 7pt"><label for="filter_active">Actief</label></td>
+					<td />
+					<td><input type="checkbox" id="filter_queued" name="filter_queued" value="1" <%= filter_queued %>></td>
+					<td nowrap style="font-size: 7pt"><label for="filter_queued">Wachtrij</label></td>
+					<td />
+					<td><input type="checkbox" id="filter_sources" name="filter_sources" value="1" <%= filter_sources %>></td>
+					<td nowrap style="font-size: 7pt"><label for="filter_sources">Geen Bronnen</label></td>
+					<td />
+					<td><input type="checkbox" id="filter_paused" name="filter_paused" value="1" <%= filter_paused %>></td>
+					<td nowrap style="font-size: 7pt"><label for="filter_paused">Gepauzeerd</label></td>
+					<td />
+					<td><input type="checkbox" id="filter_show_all" name="filter_show_all" value="1" <%= filter_show_all %>></td>
+					<td nowrap style="font-size: 7pt"><label for="filter_show_all">Toon Alle Bronnen</label></td>
+					<td />
+					<td nowrap><input type="submit" value=" Instellen "></td>
+					<td width="100%" />
+					<td nowrap align="right" style="font-size: 7pt"><a href="?refresh=<%= random %>">Ververs 
+							Pagina</a></td>
+				</tr>
+			</table>
+		</form>
+		<br>
+		<table width="100%" cellspacing="0" style="border-collapse: collapse">
+			<tr>
+				<td class="viewheader">Bestandsnaam</td>
+				<td class="viewheader" align="center">Grootte</td>
+				<td class="viewheader" align="center">Voortgang</td>
+				<td class="viewheader" align="center">Snelheid</td>
+				<td class="viewheader" align="center">Bronnen</td>
+				<td class="viewheader" align="center">Status</td>
+				<td class="viewheader" align="center">Opties</td>
+			</tr>
