--- a/trunk/Remote/nl/home.htm
+++ b/trunk/Remote/nl/home.htm
@@ -1,75 +1,78 @@
-		<table width="95%" align="center" cellspacing="0" cellpadding="0">
-			<tr>
-				<td align="center">
-					<table width="100%" cellspacing="0">
-						<tr>
-							<td class="tabedg">&nbsp;</td>
-							<td class="tabsel">Home</td>
-							<td class="tabfil">&nbsp;</td>
-							<td class="tab"><a class="tab" href="search">Zoeken</a></td>
-							<td class="tabfil">&nbsp;</td>
-							<td class="tab"><a class="tab" href="downloads">Downloads</a></td>
-							<td class="tabfil">&nbsp;</td>
-							<td class="tab"><a class="tab" href="uploads">Uploads</a></td>
-							<td class="tabfil">&nbsp;</td>
-							<td class="tab"><a class="tab" href="network">Netwerken</a></td>
-							<td class="tabedg">&nbsp;</td>
-						</tr>
-					</table>
-				</td>
-			</tr>
-			<tr>
-				<td class="frame">
-					<p>
-						Welkom op <b>Shareaza's Web Interface</b>.
-					</p>
-					<p>
-						Deze web console biedt volledige controle over je zoekopdrachten, downloads,
-						uploads en netwerkverbindingen.
-					</p>
-					<br>
-					<table cellspacing="8">
-						<tr>
-							<td width="4"/>
-							<td><a href="search"><b>Zoeken</b></a> - Zoek naar bestanden, werk met zoekresultaten, selecteer bestanden om ze te downloaden.</td>
-						</tr>
-						<tr>
-							<td width="4"/>
-							<td><a href="downloads"><b>Downloads</b></a> - Beheer je downloads, zoals pauzeren, hervatten of volledige bestanden wissen.</td>
-						</tr>
-						<tr>
-							<td width="4"/>
-							<td><a href="uploads"><b>Uploads</b></a> - Bekijk je uploads.</td>
-						</tr>
-						<tr>
-							<td width="4"/>
-							<td><a href="network"><b>Netwerken</b></a> - Bekijk en beheer je netwerkverbindingen, verbindt met verschillende P2P netwerken of verbreek de verbinding, of sluit Shareaza af.</td>
-						</tr>
-					</table>
-					<br>
-					<table align="center">
-						<form method="get" action="newsearch">
-							<tr>
-								<td>Snel Zoeken:</td>
-								<td><input type="text" name="search" size="30"></td>
-								<td>
-									<input type="submit" value="Start">
-								</td>
-							</tr>
-						</form>
-					</table>
-					<br>
-					<table align="center">
-						<form method="get" action="newdownload">
-							<tr>
-								<td>Magnet Downloaden:</td>
-								<td><input type="text" name="uri" size="50"></td>
-								<td>
-									<input type="submit" value="Start">
-								</td>
-							</tr>
-						</form>
-					</table>
-				</td>
-			</tr>
-		</table>
+<table width="95%" align="center" cellspacing="0" cellpadding="0">
+	<tr>
+		<td align="center">
+			<table width="100%" cellspacing="0">
+				<tr>
+					<td class="tabedg">&nbsp;</td>
+					<td class="tabsel">Home</td>
+					<td class="tabfil">&nbsp;</td>
+					<td class="tab"><a class="tab" href="search">Zoeken</a></td>
+					<td class="tabfil">&nbsp;</td>
+					<td class="tab"><a class="tab" href="downloads">Downloads</a></td>
+					<td class="tabfil">&nbsp;</td>
+					<td class="tab"><a class="tab" href="uploads">Uploads</a></td>
+					<td class="tabfil">&nbsp;</td>
+					<td class="tab"><a class="tab" href="network">Netwerken</a></td>
+					<td class="tabedg">&nbsp;</td>
+				</tr>
+			</table>
+		</td>
+	</tr>
+	<tr>
+		<td class="frame">
+			<p>
+				Welkom op <b>Shareaza's Web Interface</b>.
+			</p>
+			<p>
+				Deze web console biedt volledige controle over je zoekopdrachten, downloads,
+				uploads en netwerkverbindingen.
+			</p>
+			<br>
+			<table cellspacing="8">
+				<tr>
+					<td width="4" />
+					<td><a href="search"><b>Zoeken</b></a> - Zoek naar bestanden, werk met zoekresultaten,
+						selecteer bestanden om ze te downloaden.</td>
+				</tr>
+				<tr>
+					<td width="4" />
+					<td><a href="downloads"><b>Downloads</b></a> - Beheer je downloads, zoals pauzeren, hervatten 
+                                                of volledige bestanden wissen.</td>
+				</tr>
+				<tr>
+					<td width="4" />
+					<td><a href="uploads"><b>Uploads</b></a> - Bekijk je uploads.</td>
+				</tr>
+				<tr>
+					<td width="4" />
+					<td><a href="network"><b>Netwerken</b></a> - Bekijk en beheer je netwerkverbindingen, 
+						verbindt met verschillende P2P netwerken of verbreek de verbinding, of sluit Shareaza af.</td>
+				</tr>
+			</table>
+			<br>
+			<form method="get" action="newsearch" ID="Form1">
+				<table align="center">
+					<tr>
+						<td>Snel Zoeken:</td>
+						<td><input type="text" name="search" size="30"></td>
+						<td>
+							<input type="submit" value="Start">
+						</td>
+					</tr>
+				</table>
+			</form>
+			<br>
+			<form method="get" action="newdownload" ID="Form2">
+				<table align="center">
+					<tr>
+						<td>Magnet Downloaden:</td>
+						<td><input type="text" name="uri" size="50"></td>
+						<td>
+							<input type="submit" value="Start">
+						</td>
+					</tr>
+				</table>
+			</form>
+		</td>
+	</tr>
+</table>
