--- a/trunk/Remote/nl/login.htm
+++ b/trunk/Remote/nl/login.htm
@@ -21,7 +21,7 @@
 			<tr>
 				<td class="frame">
 					<div>
-						Welkom op <b>Shareaza's Web Interface</b>.</b>
+						Welkom op <b>Shareaza's Web Interface.</b>
 						Als dit exemplaar van Shareaza op jouw PC draait, voer dan
 						alsjeblieft je gebruikersnaam en wachtwoord in, en klik vervolgens op <b>Login</b>.
 					</div>
@@ -33,7 +33,7 @@
 						Probeer het alsjeblieft nog een keer.
 					</div>
 					<%?%>
-					<form method="get">
+					<form method="get" action="">
 					<input type="hidden" name="submit" value="1">
 					<table align="center">
 						<tr>
