--- a/trunk/Remote/pt/home.htm
+++ b/trunk/Remote/pt/home.htm
@@ -1,75 +1,78 @@
-		<table width="95%" align="center" cellspacing="0" cellpadding="0">
-			<tr>
-				<td align="center">
-					<table width="100%" cellspacing="0">
-						<tr>
-							<td class="tabedg">&nbsp;</td>
-							<td class="tabsel">Lar</td>
-							<td class="tabfil">&nbsp;</td>
-							<td class="tab"><a class="tab" href="search">Pesquisar</a></td>
-							<td class="tabfil">&nbsp;</td>
-							<td class="tab"><a class="tab" href="downloads">Downloads</a></td>
-							<td class="tabfil">&nbsp;</td>
-							<td class="tab"><a class="tab" href="uploads">Uploads</a></td>
-							<td class="tabfil">&nbsp;</td>
-							<td class="tab"><a class="tab" href="network">Redes</a></td>
-							<td class="tabedg">&nbsp;</td>
-						</tr>
-					</table>
-				</td>
-			</tr>
-			<tr>
-				<td class="frame">
-					<p>
-						Bem-vindo ao <b>Acesso Remoto do Shareaza</b>.
-					</p>
-					<p>
-						Este Web-console lhe dá total controle sobre suas pesquisas, downloads,
-						uploads e conexões de rede.
-					</p>
-					<br>
-					<table cellspacing="8">
-						<tr>
-							<td width="4"/>
-							<td><a href="search"><b>Pesquisar</b></a> - Procure arquivos, controle os resultados de pesquisa, selecione arquivos para baixar.</td>
-						</tr>
-						<tr>
-							<td width="4"/>
-							<td><a href="downloads"><b>Downloads</b></a> - Controle os Downloads, pause e continue, limpe os completados.</td>
-						</tr>
-						<tr>
-							<td width="4"/>
-							<td><a href="uploads"><b>Uploads</b></a> - Vizualize os seus uploads.</td>
-						</tr>
-						<tr>
-							<td width="4"/>
-							<td><a href="network"><b>Networks</b></a> - Analize e controle as conexões de rede, conecte ou desconecte de diversas redes P2P, ou feche o Shareaza.</td>
-						</tr>
-					</table>
-					<br>
-					<table align="center">
-						<form method="get" action="newsearch">
-							<tr>
-								<td>Quick Search:</td>
-								<td><input type="text" name="search" size="30"></td>
-								<td>
-									<input type="submit" value="Go">
-								</td>
-							</tr>
-						</form>
-					</table>
-					<br>
-					<table align="center">
-						<form method="get" action="newdownload">
-							<tr>
-								<td>Baixar Magnet:</td>
-								<td><input type="text" name="uri" size="50"></td>
-								<td>
-									<input type="submit" value="Ir">
-								</td>
-							</tr>
-						</form>
-					</table>
-				</td>
-			</tr>
-		</table>
+<table width="95%" align="center" cellspacing="0" cellpadding="0">
+	<tr>
+		<td align="center">
+			<table width="100%" cellspacing="0">
+				<tr>
+					<td class="tabedg">&nbsp;</td>
+					<td class="tabsel">Lar</td>
+					<td class="tabfil">&nbsp;</td>
+					<td class="tab"><a class="tab" href="search">Pesquisar</a></td>
+					<td class="tabfil">&nbsp;</td>
+					<td class="tab"><a class="tab" href="downloads">Downloads</a></td>
+					<td class="tabfil">&nbsp;</td>
+					<td class="tab"><a class="tab" href="uploads">Uploads</a></td>
+					<td class="tabfil">&nbsp;</td>
+					<td class="tab"><a class="tab" href="network">Rede</a></td>
+					<td class="tabedg">&nbsp;</td>
+				</tr>
+			</table>
+		</td>
+	</tr>
+	<tr>
+		<td class="frame">
+			<p>
+				Bem vindo ao <b>Acesso Remotdo do Shareaza</b>.
+			</p>
+			<p>
+				Este web-console permite controle total sobre as suas pesquisas, downloads, uploads 
+				e conex&#245;es de rede.
+			</p>
+			<br>
+			<table cellspacing="8">
+				<tr>
+					<td width="4" />
+					<td><a href="search"><b>Pesquisar</b></a> - Pesquise por arquivos, olhe os resultados das 
+						buscas, selecione os arquivos para baixar.</td>
+				</tr>
+				<tr>
+					<td width="4" />
+					<td><a href="downloads"><b>Downloads</b></a> - Controle os downloads, pause e resuma, 
+						limpe os completados.</td>
+				</tr>
+				<tr>
+					<td width="4" />
+					<td><a href="uploads"><b>Uploads</b></a> - Veja os uploads.</td>
+				</tr>
+				<tr>
+					<td width="4" />
+					<td><a href="network"><b>Rede</b></a> - Analize e controle as suas conex&#245;es de rede, 
+						conecte-se ou desconecte-se de diferentes redes P2P, ou desligue o Shareaza.</td>
+				</tr>
+			</table>
+			<br>
+			<form method="get" action="newsearch" ID="Form1">
+				<table align="center">
+					<tr>
+						<td>Pesquisa R&#225;pida:</td>
+						<td><input type="text" name="search" size="30"></td>
+						<td>
+							<input type="submit" value=" Ir ">
+						</td>
+					</tr>
+				</table>
+			</form>
+			<br>
+			<form method="get" action="newdownload" ID="Form2">
+				<table align="center">
+					<tr>
+						<td>Baixar Magnet:</td>
+						<td><input type="text" name="uri" size="50"></td>
+						<td>
+							<input type="submit" value=" Ir ">
+						</td>
+					</tr>
+				</table>
+			</form>
+		</td>
+	</tr>
+</table>
