--- a/trunk/Remote/lt/uploadsQueueStart.htm
+++ b/trunk/Remote/lt/uploadsQueueStart.htm
@@ -1,13 +1,13 @@
 <%? !queue_expanded %>
                                        <h4><a class="emblink" href="?queue_expand=<%= queue_id %>">+ <%= queue_caption %></a>
 <%? queue_transfers %>
-                                       <small>(<%= queue_transfers %> active / <%= queue_queued %> queued, using <%= queue_bandwidth %>)</small>
+                                       <small>(<%= queue_transfers %> aktyvūs / <%= queue_queued %> eilėje, naudojama <%= queue_bandwidth %>)</small>
 <%?%>
                                        </h4>
 <%?%><%? queue_expanded %>
                                        <h4><a class="emblink" href="?queue_collapse=<%= queue_id %>">- <%= queue_caption %></a>
 <%? queue_transfers %>
-                                       <small>(<%= queue_transfers %> active / <%= queue_queued %> queued, using <%= queue_bandwidth %>)</small>
+                                       <small>(<%= queue_transfers %> aktyvūs / <%= queue_queued %> eilėje, naudojama <%= queue_bandwidth %>)</small>
 <%?%>
                                        </h4>
                                        <table width="100%" cellspacing="0" style="border-collapse: collapse;">
